fix bug where sidebar would overflow and mess up the page dimensions

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,8 +1,4 @@
 
-body {
-  background-color: #f8f8f8;
-}
-
 #content {
   background-color: #ffffff
 }
